--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <title>JavaScript</title>
 </head>
 <body>
-<script src="index.js"></script>
+
+<script>
+    var price = (function(){
+        var price = 23;
+        var discount = 12;
+
+        return price - discount;
+    })();
+
+    console.log(price);
+
+
+    (function () {
+
+
+
+
+    })();
+</script>
 </body>
 </html>
